pushing recent changes to github

--- a/app/views/forms/_form1097.html.erb
+++ b/app/views/forms/_form1097.html.erb
@@ -34,7 +34,37 @@
 <!-- end label parts -->  
                           <div id="fields-container" class="form1097">
                              <img width="100%" src="/media/1097btc.png" />
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuers_name_address" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuers_fin" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_fin" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="issuer_of_bon" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="entity_or_person" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2a" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2b" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+
+
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5a" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5b" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5c" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5d" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5e" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5f" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5g" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5h" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5i" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5j" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5k" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5i" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+
+              
                               
                               <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
                               <input type="hidden" name="form_id" value="1097"> 
