--- a/app/views/forms/_form1098.html.erb
+++ b/app/views/forms/_form1098.html.erb
@@ -35,7 +35,27 @@
 <!-- end label parts -->  
                           <div id="fields-container" class="form1098">
                              <img width="100%" src="/media/1098.png" />
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_lenders_name_address" value="">
+
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipient_lenders_fin" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_borrowers_taxpayer_id" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_borrowers_name" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="street_name" name="" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
+                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
+                    
+
                               
                               <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
                               <input type="hidden" name="form_id" value="1098.png"> 
