--- a/app/views/forms/_form1099b.html.erb
+++ b/app/views/forms/_form1099b.html.erb
@@ -32,10 +32,50 @@
                         <!-- end label parts -->  
                                 <div id="fields-container" class="form1099b">
                                    <img width="100%" src="/media/1099b.png" />
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+
+                                   <!-- fields -->
+                                    <input class="abs" style="top: 8%;left: 1%;width: 45%;height: 20%;" type="text" name="payers_name_address" value="">
+
+                                    <input class="abs" style="top: 32%;left: 1%;width: 24%;height: 9%;" type="text" name="payers_fin" value="">
+                                    <input class="abs" style="top: 32%;left: 26%;width: 20%;height: 9%;" type="text" name="recipients_id" value="">
+                                    <input class="abs" style="top: 44%;left: 1%;width: 45%;height: 7%;" type="text" name="recipients_name" value="">
+                                    <input class="abs" style="top: 54%;left: 1%;width: 45%;height: 6%;" type="text" name="street_address" value="">
+                                    <input class="abs" style="top: 64%;left: 1%;width: 45%;height: 6%;" type="text" >
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_num" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2nd_tin_not" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="cusip_num" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="fatca_fil_req" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="state_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="state_id_no" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="state_tax_withheld" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="state_tax_withheld2" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="app_checkbox" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1a" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1b" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1c" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1d" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1e" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1f" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1g" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="">
+                                  <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-                                    <input type="hidden" name="form_id" value="1099"> 
+                                    <input type="hidden" name="form_id" value="1099b"> 
                                 </div><!-- fields-container -->
                               </form>
                               
