--- a/app/views/forms/_form1099c.html.erb
+++ b/app/views/forms/_form1099c.html.erb
@@ -31,10 +31,26 @@
                         <!-- end label parts -->  
                                 <div id="fields-container" class="form1099c">
                                    <img width="100%" src="/media/1099c.png" />
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+
+                                    <!-- fields -->
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="creditors_name_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="creditors_fin" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="debtors_id" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="debtors_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_num" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
+                                    
+                                  <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-                                    <input type="hidden" name="form_id" value="1099"> 
+                                    <input type="hidden" name="form_id" value="1099c"> 
                                 </div><!-- fields-container -->
                               </form>
                               
