--- a/app/views/forms/_form1099k.html.erb
+++ b/app/views/forms/_form1099k.html.erb
@@ -30,10 +30,61 @@
                         <!-- end label parts -->  
                                 <div id="fields-container" class="form1099k">
                                    <img width="100%" src="/media/1099k.png" />
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+                                    
+                                    <!-- fields -->
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="filers_name_street" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payment_settlement_entity" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="electronic_payment_fac" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payment_card" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="third_party_network" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payees_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="pses_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_num" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2nd_tin_not" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="filers_fin" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payees_taxpayer" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1a" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1b" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5a" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5b" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5c" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5d" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5e" value="">
+                                    
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5f" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5g" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5h" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5i" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5j" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5k" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5l" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8_2" value="">
+
+                                
+
+                                  <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-                                    <input type="hidden" name="form_id" value="1099"> 
+                                    <input type="hidden" name="form_id" value="1099k"> 
                                 </div><!-- fields-container -->
                               </form>
                               
