--- a/app/views/forms/_form5498.html.erb
+++ b/app/views/forms/_form5498.html.erb
@@ -35,7 +35,42 @@
                           <div id="fields-container" class="form5498">
                              <img width="100%" src="/
 media/5498.png" />
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+                              <!-- fields -->
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="trustees_issuers_name_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="trustees_issuers_fin" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="participants_social_security_number" value="">
+
+
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="participants_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7_ira" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7_sep" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7_simple" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7_roth_ira" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12a" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12b" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13a" value="">
+                                    
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13b" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13c" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14a" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14b" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15a" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15b" value="">
+                                  <!-- fields -->
                               
                               <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
                               <input type="hidden" name="form_id" value="5498"> 
