--- a/app/views/forms/_form1099a.html.erb
+++ b/app/views/forms/_form1099a.html.erb
@@ -32,10 +32,27 @@
                         <!-- end label parts -->  
                                 <div id="fields-container" class="form1099a">
                                    <img width="100%" src="/media/1099a.png" />
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+
+                                   <input class="abs" style="top: 14%;left: 1%;width: 45%;height:20%;border:1px solid black;" name="lenders_name_address" value="" type="text">
+                                    <input class="abs" style="top: 39%;left: 1%;width: 22%;height:6%;border:1px solid black;" name="lenders_fin" value="" type="text">
+                                    <input class="abs" style="top: 39%;left: 24%;width: 22%;height:6%;border:1px solid black" name="borrowers_id" value="" type="text">
+                                    
+                                    <input class="abs" style="top: 49%;left: 1%;width: 45%;height:10%;border:1px solid black" name="borrowers_name" value="" type="text">
+                                    <input class="abs" style="top: 38%;left: 47%;width: 18%;height:6%;border:1px solid black" name="1" value="" type="text">
+                                    <input class="abs" style="top: 38%;left: 68%;width: 16%;height:6%;border:1px solid black" name="2" value="" type="text">
+                                    <input class="abs" style="top: 46%;left: 48%;width: 17%;height: 13%;border:1px solid black;" name="3" value="" type="text">
+                                    <input class="abs" style="top: 49%;left: 68%;width: 16%;height:10%;border:1px solid black" name="4" value="" type="text">
+                                    <input class="abs" style="top: 66%;left: 82.5%;width: 1%;height:2%;border:1px solid black" name="5" value="" type="text">
+                                    <input class="abs" style="top: 74%;left: 47%;width: 37%;height: 14%;border:1px solid black;" name="6" value="" type="text">
+                                    <input class="abs" style="top: 64%;left: 1%;width: 45%;height: 5%;border:1px solid black;" name="street_address" value="" type="text">
+                                    <input class="abs" style="top: 74%;left: 1%;width: 45%;height: 4.8%;border:1px solid black;" name="city_town" value="" type="text">
+                                    <input class="abs" style="top: 83%;left: 1%;width: 45%;height: 5%;border:1px solid black;" name="account_number" value="" type="text">
+                                
+                                   
+
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-                                    <input type="hidden" name="form_id" value="1099"> 
+                                    <input type="hidden" name="form_id" value="1099a"> 
                                 </div><!-- fields-container -->
                               </form>
                               
