--- a/app/views/forms/_form1099ltc.html.erb
+++ b/app/views/forms/_form1099ltc.html.erb
@@ -30,10 +30,33 @@
                         <!-- end label parts -->  
                                 <div id="fields-container" class="form1099ltc">
                                    <img width="100%" src="/media/1099ltc.png" />
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+                                    
+                                    <!-- fields -->
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_name_street" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="policyholders_id" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="policyholders_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_num" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="qualifield_contract" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="per_diem" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="reimbursed_amount" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="insureds_taxpayer_id" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="insureds_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="check_if_applicable" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="chronically_ill" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="terminally_ill" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="date_certifed" value="">
+                                   
+                                  <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-                                    <input type="hidden" name="form_id" value="1099"> 
+                                    <input type="hidden" name="form_id" value="1099ltc"> 
                                 </div><!-- fields-container -->
                               </form>
                               
