--- a/app/views/forms/_form1099r.html.erb
+++ b/app/views/forms/_form1099r.html.erb
@@ -30,10 +30,48 @@
                         <!-- end label parts -->  
                                 <div id="fields-container" class="form1099r">
                                    <img width="100%" src="/media/1099r.png" />
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+                                    
+                                    <!-- fields -->
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_name_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="payers_fin" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_id" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="recipients_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="fatca_filing_req" value="">
+
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2a" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2b" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9a" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9b" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12_2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13_2" value="">
+
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="14_2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="15_2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="16" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="16_2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="17" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="17_2" value="">
+                                  <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-                                    <input type="hidden" name="form_id" value="1099"> 
+                                    <input type="hidden" name="form_id" value="1099r"> 
                                 </div><!-- fields-container -->
                               </form>
                               
