--- a/app/views/forms/_form3921.html.erb
+++ b/app/views/forms/_form3921.html.erb
@@ -35,7 +35,22 @@
                           <div id="fields-container" class="form3921">
                              <img width="100%" src="/
 media/3921.png" />
-                              <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="<%# @form_fields['13e']%>">
+                              <!-- fields -->
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="transferors_name_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="transferors_fin" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="employees_id" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="employees_name" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_number" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
+                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
+                                    
+                                  <!-- fields -->
                               
                               <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
                               <input type="hidden" name="form_id" value="3921"> 
