--- a/app/views/forms/_form1099c.html.erb
+++ b/app/views/forms/_form1099c.html.erb
@@ -33,19 +33,21 @@
                                    <img width="100%" src="/media/1099c.png" />
 
                                     <!-- fields -->
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="creditors_name_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="creditors_fin" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="debtors_id" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="debtors_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town_state" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_num" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
+                                   <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 21%;" name="creditors_name_address" value="" type="text">
+                                    <input class="abs" style="top: 38.5%;left: 1.5%;width: 21.5%;height: 5%;" name="creditors_fin" value="" type="text">
+                                    <input class="abs" name="debtors_id" value="" style="top: 38.5%;left: 24.5%;width: 21.5%;height: 5%;" type="text">
+                                    <input class="abs" name="debtors_name" value="" style="top: 48.5%;left: 1.5%;width: 44.5%;height: 9%;" type="text">
+                                    <input class="abs" name="street_address" value="" style="top: 63%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
+                                    <input class="abs" name="city_town_state" value="" style="top: 73.5%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
+                                    <input class="abs" name="account_num" value="" style="top: 83%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
+                                    <input class="abs" style="top: 9%;left: 47%;width: 18%;height: 5%;" name="1" value="" type="text">
+                                    <input class="abs" style="top: 19%;left: 48.5%;width: 16.5%;height: 5%;" name="2" value="" type="text">
+                                    <input class="abs" style="top: 29%;left: 48.5%;width: 16.5%;height: 5%;" name="3" value="" type="text">
+                                    <input class="abs" name="4" value="" style="top: 39%;left: 47.5%;width: 36.5%;height: 19%;" type="text">
+                                    <input class="abs" name="5" value="" style="top: 67%;left: 47.5%;width: 36.5%;height: 11%;" type="text">
+                                    <input class="abs" name="6" value="" style="top: 83%;left: 47.5%;width: 17.5%;height: 5%;" type="text">
+                                    <input class="abs" name="7" value="" style="top: 83%;left: 67.5%;width: 16.5%;height: 5%;" type="text">
+                                    
                                     
                                   <!-- fields -->
                                     
