--- a/app/views/forms/_form1099b.html.erb
+++ b/app/views/forms/_form1099b.html.erb
@@ -34,44 +34,44 @@
                                    <img width="100%" src="/media/1099b.png" />
 
                                    <!-- fields -->
-                                    <input class="abs" style="top: 8%;left: 1%;width: 45%;height: 20%;" type="text" name="payers_name_address" value="">
+                                    <input class="abs" style="top: 8%;left: 1%;width: 45%;height: 20%;" name="payers_name_address" value="" type="text">
 
-                                    <input class="abs" style="top: 32%;left: 1%;width: 24%;height: 9%;" type="text" name="payers_fin" value="">
-                                    <input class="abs" style="top: 32%;left: 26%;width: 20%;height: 9%;" type="text" name="recipients_id" value="">
-                                    <input class="abs" style="top: 44%;left: 1%;width: 45%;height: 7%;" type="text" name="recipients_name" value="">
-                                    <input class="abs" style="top: 54%;left: 1%;width: 45%;height: 6%;" type="text" name="street_address" value="">
-                                    <input class="abs" style="top: 64%;left: 1%;width: 45%;height: 6%;" type="text" >
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="city_town" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="account_num" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2nd_tin_not" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="cusip_num" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="fatca_fil_req" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="state_name" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="state_id_no" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="state_tax_withheld" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="state_tax_withheld2" value="">
+                                    <input class="abs" style="top: 32%;left: 1%;width: 24%;height: 9%;" name="payers_fin" value="" type="text">
+                                    <input class="abs" style="top: 32%;left: 26%;width: 20%;height: 9%;" name="recipients_id" value="" type="text">
+                                    <input class="abs" style="top: 44%;left: 1%;width: 45%;height: 7%;" name="recipients_name" value="" type="text">
+                                    <input class="abs" style="top: 54%;left: 1%;width: 45%;height: 6%;" name="street_address" value="" type="text">
+                                    
+                                    <input class="abs" style="top: 64%;left: 1%;width: 45%;height: 6%;" name="city_town" value="" type="text">
+                                    <input class="abs" style="top: 73%;left: 1%;width: 37%;height: 3.5%;" name="account_num" value="" type="text">
+                                    <input class="abs" style="top: 75%;left: 42%;width: 1%;height: 1%;" name="2nd_tin_not" value="" type="text">
+                                    <input class="abs" style="top: 79.3%;left: 1%;width: 31%;" name="cusip_num" value="" type="text">
+                                    <input class="abs" style="top: 81%;left: 43%;width: 1.5%;height: 1.5%;" name="fatca_fil_req" value="" type="text">
+                                    <input class="abs" style="top: 86%;left: 1%;width: 14%;height: 3.5%;" name="state_name" value="" type="text">
+                                    <input class="abs" style="top: 86%;left: 16%;width: 14%;" name="state_id_no" value="" type="text">
+                                    <input class="abs" style="top: 86%;left: 32%;width: 14%;height: 3.5%;" name="state_tax_withheld" value="" type="text">
+                                    <input class="abs" style="top: 90.2%;left: 32%;width: 14%;height: 2.6%;" name="state_tax_withheld2" value="" type="text">
 
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="app_checkbox" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1a" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1b" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1c" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1d" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1e" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1f" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="1g" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="2" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="3" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="4" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="5" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="6" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="7" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="8" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="9" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="10" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="11" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="12" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="13" value="">
-                                    <input class="abs" style="top: 0%;left: 0%;width: 0%;" type="text" name="" value="">
+                                    <input class="abs" style="top: 6%;left: 47.5%;width: 23%;height: 9%;" name="app_checkbox" value="" type="text">
+                                    <input class="abs" style="top: 18.7%;left: 47.5%;width: 52%;" name="1a" value="" type="text">
+                                    <input class="abs" name="1b" value="" style="top: 24.7%;left: 47.5%;width: 18%;" type="text">
+                                    <input class="abs" name="1c" value="" style="top: 25%;left: 66.5%;width: 17%;height: 3.1%;" type="text">
+                                    <input class="abs" name="1d" value="" style="top: 31.2%;left: 48.5%;width: 17%;" type="text">
+                                    <input class="abs" style="top: 31.5%;left: 67.3%;width: 16.9%;height: 3%;" name="1e" value="" type="text">
+                                    <input class="abs" style="top: 38%;left: 48.5%;width: 17%;height: 3%;" name="1f" value="" type="text">
+                                    <input class="abs" style="top: 38%;left: 67.3%;width: 17%;height: 3%;" name="1g" value="" type="text">
+                                    <input class="abs" style="" name="2" value="" type="text">
+                                    <input class="abs" style="" name="3" value="" type="text">
+                                    <input class="abs" style="" name="4" value="" type="text">
+                                    <input class="abs" style="" name="5" value="" type="text">
+                                    <input class="abs" style="" name="6" value="" type="text">
+                                    <input class="abs" style="" name="7" value="" type="text">
+                                    <input class="abs" style="" name="8" value="" type="text">
+                                    <input class="abs" name="9" value="" style="top: 72%;left: 67.5%;width: 16.5%;height: 4.5%;" type="text">
+                                    <input class="abs" name="10" value="" style="top: 81.5%;left: 48.5%;width: 16.5%;height: 4.5%;" type="text">
+                                    <input class="abs" name="11" value="" style="top: 81.5%;left: 67.5%;width: 16.5%;height: 4.5%;" type="text">
+                                    <input class="abs" name="12" value="" style="top: 91%;left: 62.5%;width: 0.5%;height: 1.5%;" type="text">
+                                    <input class="abs" name="13" value="" style="top: 89%;left: 67.5%;width: 16.5%;height: 3.8%;" type="text">
+                                    
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
