--- a/app/views/forms/_form3922.html.erb
+++ b/app/views/forms/_form3922.html.erb
@@ -32,46 +32,47 @@
                     <div id="fields-container" class="form3922">
                         <img width="100%" src="/
 media/3922.png" />
-                          <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" type="text" name="corp_name" value="<%= @form_fields['corp_name']%>" placeholder="">
-                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="1" value="<%= @form_fields['1']%>" placeholder="">
-                          <input class="abs" style="top: 10.2%;left: 48.5%;width: 15.5%;height: 3%;" type="text" name="2" value="<%= @form_fields['2']%>" placeholder="">
-                          <input class="abs" style="top: 13.6%;left: 9.5%;width: 19%;height: 3%;" type="text" name="corp_fin" value="<%= @form_fields['corp_fin']%>" placeholder="">
-                          <input class="abs" style="top: 13.6%;left: 29%;width: 19%;height: 3%;" type="text" name="empl_id" value="<%= @form_fields['empl_id']%>" placeholder="">
+                          <input class="abs" style="top: 7%;left: 10%;width: 38%;height: 6%;" name="corp_name" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.5%;height: 3%;" name="1" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 10.2%;left: 48.5%;width: 15.5%;height: 3%;" name="2" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 14.6%;left: 9.5%;width: 18%;height: 1.8%;" name="corp_fin" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 14.6%;left: 29%;width: 19%;height: 2%;" name="empl_id" value="" placeholder="" type="text">
 
 
-                          <input class="abs" style="top: 15.7%;left: 48.5%;width: 16%;height: 2.5%;" type="text" name="3" value="<%= @form_fields['3']%>" placeholder="">
-                          <input class="abs" style="top: 15.7%;left: 64.3%;height: 2.4%;width: 16%;" type="text" name="4" value="<%= @form_fields['4']%>" placeholder="">
-                          <input class="abs" style="top: 19.2%;left: 48.3%;width: 16%;height: 2%;" type="text" name="5" value="<%= @form_fields['5']%>" placeholder="">
-                          <input class="abs" style="top: 19.2%;left: 64.4%;width: 16%;height: 2%;" type="text" name="6" value="<%= @form_fields['6']%>" placeholder="">
-                          <input class="abs" style="top: 17.6%;left: 9.5%;width: 38.5%;height: 4%;" type="text" name="empl_name" value="<%= @form_fields['empl_name']%>" placeholder="">
+                          <input class="abs" style="top: 15.9%;left: 49.5%;width: 15%;height: 2.0%;" name="3" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 15.8%;left: 66.3%;height: 2.3%;width: 14%;" name="4" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 19.2%;left: 49.3%;width: 15%;height: 1.8%;" name="5" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 19.2%;left: 65.4%;width: 15%;height: 1.8%;" name="6" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 17.6%;left: 9.5%;width: 38.5%;height: 4%;" name="empl_name" value="" placeholder="" type="text">
 
-                          <input class="abs" style="top: 22.3%;left: 9.5%;width: 38%;height: 2.3%;" type="text" name="street_address" value="<%= @form_fields['street_address']%>" placeholder="">
-                          <input class="abs" style="top: 22%;left: 48.5%;width: 31.5%;height: 3.6%;" type="text" name="7" value="<%= @form_fields['7']%>" placeholder="">
-                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" type="text" name="8" value="<%= @form_fields['8']%>" placeholder="">
-                          <input class="abs" style="top: 28.4%;left: 10%;width: 38%;height: 2%;" type="text" name="account_number" value="<%= @form_fields['account_number']%>" placeholder="">
+                          <input class="abs" style="top: 22.3%;left: 9.5%;width: 38%;height: 2.3%;" name="street_address" value="" placeholder="" type="text">
+<input class="abs" style="top: 25.3%;left: 9.5%;width: 38%;height: 1.8%;" name="city_town_state_province_zip" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 22.5%;left: 48.5%;width: 31.5%;height: 3.1%;" name="7" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 28%;left: 49.5%;width: 30.5%;height: 1.9%;" name="8" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 28.4%;left: 9%;width: 38%;height: 1.5%;" name="account_number" value="" placeholder="" type="text">
 
                           <!-- checkboxes -->
 <!--
                           <input  type="hidden" name="" value="unchecked">
-                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['amended_return']%> value="checked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name=""  value="checked">
 
                            <input  type="hidden" name="" value="unchecked">
-                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['final_return']%> value="checked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name=""  value="checked">
 
                           <input  type="hidden" name="" value="unchecked">
-                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['evening_meals_only']%> value="checked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name=""  value="checked">
 
                           <input  type="hidden" name="" value="unchecked">
-                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['evening_other_meals']%> value="checked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name=""  value="checked">
 
                           <input  type="hidden" name="" value="unchecked">
-                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['other_than_evening_meals']%> value="checked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name=""  value="checked">
 
                           <input  type="hidden" name="" value="unchecked">
-                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['alcoholic_beverages']%> value="checked">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name=""  value="checked">
 
-                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['establishment_accept_cc']%> value="yes">
-                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name="" <%= @form_fields['establishment_accept_cc']%> value="no">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name=""  value="yes">
+                          <input  class="abs" style="top: 5%;left: 5%;width: 3%;height: 3%;" type="checkbox" name=""  value="no">
 -->           
                           <!-- add three more -->
 
