--- a/app/views/forms/_form8027.html.erb
+++ b/app/views/forms/_form8027.html.erb
@@ -36,47 +36,26 @@
                         <img width="100%" src="/
 media/8027.png" />
                           
-                          <input class="abs" style="top: 8%;left: 18%;width: 30%;height: 2.4%;" name="name_of_e" value="<%= @form_fields['name_of_e']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 11.5%;left: 17.9%;width: 30.5%;height: 2%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 15.2%;left: 18%;width: 58.5%;height: 2%;" name="city_state_zip" value="<%= @form_fields['city_state_zip']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 8%;left: 77.5%;width: 20%;height: 2.5%;" name="employer_id" value="<%= @form_fields['employer_id']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 25.6%;left: 2.5%;width: 74%;height: 2%;" name="employers_name" value="<%= @form_fields['employers_name']%>" placeholder="" type="text">
-
-
-                          <input class="abs" style="top: 28.5%;left: 2.5%;width: 64%;height: 2.5%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 32.2%;left: 2.5%;height: 2%;width: 75%;" name="foreign_city_state_zip" value="<%= @form_fields['foreign_city_state_zip']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 28.5%;left: 67.3%;width: 10%;height: 2.5%;/*! border: 1px solid; */" name="apt_no" value="<%= @form_fields['apt_no']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 27.2%;left: 77.4%;width: 20%;height: 4%;/*! border: 1px solid; */" name="establishment_number" value="<%= @form_fields['establishment_number']%>" placeholder="" type="text">
-
-
-                          <input class="abs" style="top: 36.3%;left: 80%;width: 13.5%;height: 3.5%;border: 1px solid blue;" name="1" value="<%= @form_fields['1']%>" placeholder="" type="text">
-
+                         <input class="abs" style="top: 8%;left: 18%;width: 59%;height: 2.4%;" name="name_of_e" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 11.5%;left: 17.9%;width: 59.5%;height: 2%;" name="number_and_street" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 15.2%;left: 18%;width: 59.5%;height: 2%;" name="city_state_zip" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 8%;left: 78.5%;width: 21%;height: 2.5%;" name="employer_id" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 25.6%;left: 2.5%;width: 74%;height: 2%;" name="employers_name" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 28.5%;left: 2.5%;width: 64%;height: 2.5%;" name="number_and_street" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 32.2%;left: 2.5%;height: 2%;width: 75%;" name="foreign_city_state_zip" value="" placeholder="" type="text">
                           
+                          <input class="abs" style="top: 27.3%;left: 78.2%;width: 20.9%;height: 3.8%;" name="est_number" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 28.5%;left: 68.3%;width: 10%;height: 2.5%;/*! border: 1px solid; */" name="apt_no" value="" placeholder="" type="text">
                           
-                          <input class="abs" style="top: 8%;left: 18%;width: 30%;height: 2.4%;" name="name_of_e" value="<%= @form_fields['name_of_e']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 11.5%;left: 17.9%;width: 30.5%;height: 2%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 15.2%;left: 18%;width: 58.5%;height: 2%;" name="city_state_zip" value="<%= @form_fields['city_state_zip']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 8%;left: 77.5%;width: 20%;height: 2.5%;" name="employer_id" value="<%= @form_fields['employer_id']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 25.6%;left: 2.5%;width: 74%;height: 2%;" name="employers_name" value="<%= @form_fields['employers_name']%>" placeholder="" type="text">
-
-
-                          <input class="abs" style="top: 28.5%;left: 2.5%;width: 64%;height: 2.5%;" name="number_and_street" value="<%= @form_fields['number_and_street']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 32.2%;left: 2.5%;height: 2%;width: 75%;" name="foreign_city_state_zip" value="<%= @form_fields['foreign_city_state_zip']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 28.5%;left: 67.3%;width: 10%;height: 2.5%;/*! border: 1px solid; */" name="apt_no" value="<%= @form_fields['apt_no']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 27.2%;left: 77.4%;width: 20%;height: 4%;/*! border: 1px solid; */" name="establishment_number" value="<%= @form_fields['establishment_number']%>" placeholder="" type="text">
-
-
-                          <input class="abs" style="top: 36.3%;left: 80%;width: 13.5%;height: 3.5%;border: 1px solid blue;" name="1" value="<%= @form_fields['1']%>" placeholder="" type="text">
-                          
-                          <input class="abs" style="top: 39.6%;left: 80%;width: 13.5%;height: 3.5%;" name="2" value="<%= @form_fields['2']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 43.1%;left: 80%;width: 13.5%;height: 3.5%;" name="3" value="<%= @form_fields['3']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 46.5%;left: 80%;width: 13.5%;height: 3.5%;" name="4a" value="<%= @form_fields['4a']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 49.8%;left: 80%;width: 13.5%;height: 3.5%;" name="4b" value="<%= @form_fields['4b']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 53.6%;left: 80%;width: 13.5%;height: 4.7%;" name="4c" value="<%= @form_fields['4c']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 58.5%;left: 80%;width: 13.5%;height: 3.5%;" name="5" value="<%= @form_fields['5']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 62%;left: 80%;width: 13.5%;height: 3.5%;" name="6" value="<%= @form_fields['6']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 65.3%;left: 80%;width: 13.5%;height: 7%;" name="7" value="<%= @form_fields['7']%>" placeholder="" type="text">
-                         
+                          <input class="abs" style="top: 36.3%;left: 81%;width: 13.5%;height: 3.5%;/*! border: 1px solid blue; */" name="1" value="" placeholder="" type="text">        
+                          <input class="abs" style="top: 39.6%;left: 81%;width: 13.5%;height: 3.5%;" name="2" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 43.1%;left: 81%;width: 13.5%;height: 3.5%;" name="3" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 46.5%;left: 81%;width: 13.5%;height: 3.5%;" name="4a" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 49.8%;left: 81%;width: 13.5%;height: 3.5%;" name="4b" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 53.6%;left: 81%;width: 13.5%;height: 4.7%;" name="4c" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 58.5%;left: 81%;width: 13.5%;height: 3.5%;" name="5" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 62%;left: 81%;width: 13.5%;height: 3.5%;" name="6" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 65.3%;left: 81%;width: 13.5%;height: 7%;" name="7" value="" placeholder="" type="text">
                           <input name="form_id" value="8027" type="hidden"> 
                           <input name="unique_id" value="<%= @form_fields['unique_id'] %>" type="hidden">
 
