--- a/app/views/forms/_formfw2g.html.erb
+++ b/app/views/forms/_formfw2g.html.erb
@@ -35,39 +35,38 @@ Download Instructions</a>
 
                         <img width="100%" src="/
 media/fw2g.png" />
-                           <input class="abs" style="top: 9%;left: 3%;w;width: 43%;height: 21%;" name="payers_details" value="<%= @form_fields['payers_details']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 32%;left: 3%;width: 22%;height: 11%;/* display: block; */" name="payers_fdi" value="<%= @form_fields['payers_fdi']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 32%;left: 25%;w;width: 21.5%;height: 11%;/* display: block; */k;" name="payers_phone" value="<%= @form_fields['payers_phone']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 46%;left: 3.5%;width: 43.5%;height: 7%;/* display: block; */" name="winners_name" value="<%= @form_fields['winners_name']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 56%;left: 3.5%;width: 43.5%;height: 7%;/* display: block; */" name="street_address" value="<%= @form_fields['street_address']%>" placeholder="" type="text">
+                           <input class="abs" style="top: 9%;left: 3%;w;width: 43%;height: 20%;" name="payers_details" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 33%;left: 3%;width: 20%;height: 10%;/* display: block; */" name="payers_fdi" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 33%;left: 25%;w;width: 21.5%;height: 10%;/* display: block; */k;" name="payers_phone" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 46%;left: 3.5%;width: 42.5%;height: 7%;/* display: block; */" name="winners_name" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 56%;left: 3.5%;width: 42.5%;height: 7%;/* display: block; */" name="street_address" value="" placeholder="" type="text">
 
                           <!-- VVVVVV -->
-                          <input class="abs" style="top: 74%;left: 2.9%;width: 43.5%;height: 8.3%;/*! border: 1px solid; */" name="city_state_country_zip" value="<%= @form_fields['city_state_country_zip']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 66%;left: 2.9%;width: 43.5%;height: 6.3%;/*! border: 1px solid; */" name="city_state_country_zip" value="" placeholder="" type="text">
 
                           
 
-                          <input class="abs" style="top: 6%;left: 48.5%;width: 15.9%;height: 7%;/*! border: 1px solid; */" name="1" value="<%= @form_fields['1']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 6.2%;left: 65.5%;width: 17.5%;height: 7.2%;/*! border: 1px solid; */" name="2" value="<%= @form_fields['2']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 15.6%;left: 47%;width: 18%;height: 4%;/*! border: 1px solid; */" name="3" value="<%= @form_fields['3']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 15.6%;left: 67.4%;width: 15.5%;height: 4%;/*! border: 1px solid; */" name="4" value="<%= @form_fields['4']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 22.7%;left: 47.5%;width: 17.2%;height: 3.3%;/*! border: 1px solid; */" name="5" value="<%= @form_fields['5']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 22.6%;left: 65.6%;height: 3.5%;width: 17%;/*! border: 1px solid; */" name="6" value="<%= @form_fields['6']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 29.2%;left: 49.3%;width: 15.5%;height: 4%;/*! border: 1px solid; */" name="7" value="<%= @form_fields['7']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 29.2%;left: 65.4%;width: 17.3%;height: 4%;/*! border: 1px solid; */" name="8" value="<%= @form_fields['8']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 36.2%;left: 47%;width: 18%;height: 7%;/*! border: 1px solid; */" name="9" value="<%= @form_fields['9']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 6%;left: 49%;width: 15.9%;height: 7%;/*! border: 1px solid; */" name="1" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 6.2%;left: 66.5%;width: 17.5%;height: 7.2%;/*! border: 1px solid; */" name="2" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 16%;left: 47%;width: 18%;height: 4%;/*! border: 1px solid; */" name="3" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 15.9%;left: 68.4%;width: 15.5%;height: 4%;/*! border: 1px solid; */" name="4" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 22.7%;left: 47.5%;width: 17.2%;height: 3.3%;/*! border: 1px solid; */" name="5" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 22.6%;left: 66.6%;height: 3.5%;width: 17%;/*! border: 1px solid; */" name="6" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 29.2%;left: 49.3%;width: 15.5%;height: 4%;/*! border: 1px solid; */" name="7" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 29.2%;left: 66.4%;width: 17.3%;height: 4%;/*! border: 1px solid; */" name="8" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 36.2%;left: 47%;width: 18%;height: 7%;/*! border: 1px solid; */" name="9" value="" placeholder="" type="text">
 
-                          <input class="abs" style="top: 36.3%;left: 65.5%;width: 17.5%;height: 6.8%;/*! border: 1px solid; */" name="10" value="<%= @form_fields['10']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 46%;left: 47%;width: 18%;height: 6.6%;/*! border: 1px solid black; */" name="11" value="<%= @form_fields['11']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 46%;left: 65.5%;width: 17.5%;height: 6.9%;/*! border: 1px solid; */" name="12" value="<%= @form_fields['12']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 56.4%;left: 47.3%;width: 17%;height: 6%;/*! border: 1px solid black; */" name="13" value="<%= @form_fields['13']%>" placeholder="" type="text">
+                          <input class="abs" style="top: 36.3%;left: 66.5%;width: 17.5%;height: 6.8%;/*! border: 1px solid; */" name="10" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 46%;left: 47%;width: 18%;height: 6.6%;/*! border: 1px solid black; */" name="11" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 46%;left: 66.5%;width: 17.5%;height: 6.9%;/*! border: 1px solid; */" name="12" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 56.4%;left: 47.3%;width: 17%;height: 6%;/*! border: 1px solid black; */" name="13" value="" placeholder="" type="text">
 
-                          <input class="abs" style="top: 56%;left: 67.5%;width: 15.5%;height: 6.3%;/*! border: 1px solid; */" name="14" value="<%= @form_fields['14']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 66.3%;left: 49.5%;width: 15%;height: 6.3%;/*! border: 1px solid; */" name="15" value="<%= @form_fields['15']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 65.7%;left: 67.5%;width: 15.5%;height: 7.3%;/*! border: 1px solid; */" name="16" value="<%= @form_fields['16']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 75.3%;left: 49.5%;width: 15%;height: 7.3%;/*! border: 1px solid; */" name="17" value="<%= @form_fields['17']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 75.3%;left: 65.5%;width: 18%;height: 7.3%;/*! border: 1px solid; */" name="18" value="<%= @form_fields['18']%>" placeholder="" type="text">
-                          <input class="abs" style="top: 88.3%;left: 65%;width: 32%;hight: 2.3%;" name="date" value="<%= @form_fields['date']%>" placeholder="" type="text">
-                          
+                          <input class="abs" style="top: 56%;left: 67.9%;width: 15.5%;height: 6.3%;/*! border: 1px solid; */" name="14" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 66.3%;left: 49.5%;width: 15%;height: 6.3%;/*! border: 1px solid; */" name="15" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 65.7%;left: 68%;width: 15.5%;height: 7.3%;/*! border: 1px solid; */" name="16" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 75.8%;left: 49.5%;width: 15%;height: 7%;/*! border: 1px solid; */" name="17" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 75.6%;left: 66.5%;width: 17.8%;height: 7.3%;/*! border: 1px solid; */" name="18" value="" placeholder="" type="text">
+                          <input class="abs" style="top: 88.3%;left: 66%;width: 32%;height: 3.9%;" name="date" value="" placeholder="" type="text">
 
                           <input type="hidden" name="form_id" value="fw2g"> 
                           <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
